manifests-failed/move2kube-v0.4.0-alpha.0.tgz-manifest.yaml
---
# Source: move2kube/templates/move2kube-api-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-move2kubeapiheadless"
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    move2kube.konveyor.io/service: "my-release-move2kubeapi"
---
# Source: move2kube/templates/move2kube-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-move2kubeapi"
spec:
  type: ClusterIP
  ports:
    - name: "port-8080"
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: "my-release-move2kubeapi"
---
# Source: move2kube/templates/move2kube-api-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "my-release-move2kubeapi"
  labels:
    move2kube.konveyor.io/service: "my-release-move2kubeapi"
spec:
  replicas: 1
  selector:
    matchLabels:
      move2kube.konveyor.io/service: "my-release-move2kubeapi"
  serviceName: "my-release-move2kubeapiheadless"
  template:
    metadata:
      name: "my-release-move2kubeapi"
      labels:
        move2kube.konveyor.io/service: "my-release-move2kubeapi"
    spec:
      containers:
        - name: move2kubeapi
          image: "quay.io/konveyor/move2kube-ui:v0.4.0-alpha.0"
          command:
            - move2kube-api
          args:
            - '--log-level=trace'
            - '--static-files-dir=dist'
            - '--host=$(MY_POD).$(MY_SERVICE)'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: common-volume
              mountPath: /move2kube-api/data
              subPath: move2kube-api/data
          resources:
            limits:
              memory: "1Gi"
              cpu: "300m"
      restartPolicy: Always
      volumes:
        - name: common-volume
          emptyDir: {}
---
# Source: move2kube/templates/move2kube-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "my-release-move2kubeapi"
  labels:
    move2kube.konveyor.io/service: "my-release-move2kubeapi"
spec:
  rules:
    - host: "mydomain.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: "my-release-move2kubeapi"
              servicePort: 8080
